--- a/projects/vite-ssr-project/components/PageShell/PageShell.scss
+++ b/projects/vite-ssr-project/components/PageShell/PageShell.scss
@@ -1,30 +1,3 @@
-/* This CSS is common to all pages */
-html {
-    /* 62.5% = 10px = 1rem */
-    font-size: 62.5%;
-}
-body {
-    font-size: 1.4rem;
-    margin: 0;
-    font-family: sans-serif;
-}
-* {
-    box-sizing: border-box;
-}
-a {
-    text-decoration: none;
-}
-
-.navitem {
-    padding: 3px 10px;
-}
-.navitem.is-active {
-    background-color: #eee;
-}
-ul {
-    padding-inline-start: 2.5rem;
-}
-
 .layout-container {
     display: flex;
     margin: auto;
@@ -42,6 +15,7 @@ ul {
     z-index: 1;
 }
 .sidebar {
+    background-color: var(--background-color);
     position: sticky;
     left: 0;
     top: 0;
@@ -51,7 +25,6 @@ ul {
     flex-shrink: 0;
     line-height: 1.8em;
     max-height: 100vh;
-    background-color: white;
     z-index: 1;
     padding: 1rem;
     .sidebar-botton {
@@ -101,7 +74,7 @@ ul {
     width: 100%;
     > header {
         align-items: center;
-        background: #fff;
+        background: var(--background-color);
         border-bottom: 0.2rem solid #eee;
         display: flex;
         height: 8rem;
@@ -113,16 +86,11 @@ ul {
         width: 100%;
     }
 }
-.render-mark {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 4rem;
-    height: 4rem;
-    border-radius: 50%;
-    position: fixed;
-    bottom: 1rem;
-    right: 1rem;
-    z-index: 1;
-    opacity: 0.4;
+
+.navitem {
+    padding: 3px 10px;
+    color: var(--text-color);
+}
+.navitem.is-active {
+    background-color: #eee;
 }
