fix: 탭 활성 컬러 추가

--- a/projects/vite-ssr-project/components/PageShell/PageShell.scss
+++ b/projects/vite-ssr-project/components/PageShell/PageShell.scss
@@ -92,5 +92,5 @@
     color: var(--text-color);
 }
 .navitem.is-active {
-    background-color: #eee;
+    background-color: var(--active-color);
 }
