style: 설명컬러변경, 헤더 스크롤 설정

--- a/projects/vite-ssr-project/components/PageShell/PageShell.scss
+++ b/projects/vite-ssr-project/components/PageShell/PageShell.scss
@@ -42,6 +42,8 @@
         max-height: 6rem;
         width: 100%;
         border-bottom: 1px solid #eee;
+        overflow-x: scroll;
+        overflow-y: hidden;
         .sidebar-botton {
             margin: 0;
             margin-left: auto;
