--- a/projects/vite-ssr-project/pages/index/home.scss
+++ b/projects/vite-ssr-project/pages/index/home.scss
@@ -12,7 +12,7 @@
             .description {
                 font-size: 1.2rem;
                 margin: 0;
-                color: gray;
+                color: var(--description-color);
             }
         }
     }
