--- a/projects/vite-ssr-project/components/GlobalStyle/GlobalStyle.scss
+++ b/projects/vite-ssr-project/components/GlobalStyle/GlobalStyle.scss
@@ -31,3 +31,15 @@ ul {
         transform: scale(0.99);
     }
 }
+.draggable {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+.selectable {
+    -webkit-user-select: all;
+    -moz-user-select: all;
+    -ms-user-select: all;
+    user-select: all;
+}
