--- a/projects/CV/src/App.scss
+++ b/projects/CV/src/App.scss
@@ -7,6 +7,9 @@ html {
 #root {
     font-size: 1.4rem;
     width: 100%;
+    min-height: 100vh;
+    padding-left: 4.5rem;
+    overflow-x: hidden;
 }
 .section {
     padding: 20px;
@@ -18,6 +21,7 @@ html {
     display: flex;
     flex-direction: column;
     padding: 2rem;
+    min-height: 100vh;
     & hr {
         margin: 7rem 0;
     }
