--- a/projects/CV/src/components/Portfolio/Portfolio.scss
+++ b/projects/CV/src/components/Portfolio/Portfolio.scss
@@ -1,8 +1,8 @@
 .portfolio {
     > div {
-        height: 40rem;
+        height: 60rem;
         margin-top: 2rem;
-        margin-bottom: 2rem;
+        margin-bottom: 4rem;
         overflow-x: scroll;
         overflow-y: hidden;
         display: flex;
@@ -15,7 +15,12 @@
     }
 }
 .project {
-    background: gray;
+    width: 100%;
     height: 100%;
-    min-width: 40rem;
+    text-align: center;
+    .content {
+        background: gray;
+        height: 100%;
+        min-width: 40rem;
+    }
 }
