fix: 포트폴리오 디자인 수정

--- a/projects/CV/src/App.scss
+++ b/projects/CV/src/App.scss
@@ -63,3 +63,25 @@ html {
     margin: 0;
     color: gray;
 }
+
+.clickable {
+    &:hover {
+        transform: scale(1.05);
+        cursor: pointer;
+    }
+    &:active {
+        transform: scale(0.99);
+    }
+}
+.draggable {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+.selectable {
+    -webkit-user-select: all;
+    -moz-user-select: all;
+    -ms-user-select: all;
+    user-select: all;
+}
