--- a/projects/CV/src/components/Portfolio/Portfolio.scss
+++ b/projects/CV/src/components/Portfolio/Portfolio.scss
@@ -1,14 +1,13 @@
 .portfolio {
     > div {
-        height: 60rem;
+        min-height: 35rem;
         margin-top: 2rem;
         margin-bottom: 4rem;
-        overflow-x: scroll;
-        overflow-y: hidden;
-        display: flex;
+        display: grid;
         align-items: center;
         gap: 2rem;
         padding: 1.5rem;
+        grid-template-columns: repeat(3, 1fr);
     }
     > h1 {
         margin-left: 2rem;
@@ -20,8 +19,41 @@
     height: 100%;
     text-align: center;
     .content {
+        position: relative;
         background: gray;
+        min-height: 35rem;
+        min-width: 30rem;
         height: 100%;
-        min-width: 40rem;
+        .contentOver {
+            display: none;
+        }
+        &:hover {
+            .contentOver {
+                width: 100%;
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                position: absolute;
+                top: 0;
+                left: 0;
+                opacity: 0.7;
+                font-size: large;
+                > div {
+                    width: 100%;
+                    height: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+                .contentTop {
+                    background-color: black;
+                    color: white;
+                }
+                .contentBottom {
+                    background-color: white;
+                    color: black;
+                }
+            }
+        }
     }
 }
