--- a/projects/CV/src/components/Portfolio/Portfolio.scss
+++ b/projects/CV/src/components/Portfolio/Portfolio.scss
@@ -15,6 +15,9 @@
     }
 }
 .project {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
     width: 100%;
     height: 100%;
     text-align: center;
